# Yus_cipher

./: CMakeLists.txt  README.md  index.html
docs/: 技术文档.md
examples/: yus_demo.cpp
include/yus/: fhe_wrapper.h  linear_layer.h  round_key.h  sbox.h  utils.h  yus_core.h
plugins/HElib/CMake/: helibConfig.cmake  helibTargets-release.cmake  helibTargets.cmake
plugins/googletest/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
plugins/ntl/include/NTL/: CONFIG_LOG.txt  USER_MAKEFILE.txt  gmp_aux.h  mach_desc.h
plugins/ntl/lib/: libntl.la
plugins/ntl/lib/pkgconfig/: ntl.pc
plugins/openssl/include/openssl/: configuration.h
plugins/openssl/lib64/cmake/OpenSSL/: OpenSSLConfig.cmake
plugins/openssl/lib64/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
src/: fhe_wrapper.cpp  linear_layer.cpp  round_key.cpp  sbox.cpp  utils.cpp  yus_core.cpp
tests/: test_fhe.cpp  test_linear_layer.cpp  test_main.cpp  test_round_key.cpp  test_sbox.cpp  test_yus_core.cpp
